# Diplomado-Usta

./: Mi_primer_cuaderno.ipynb  Readme.MD  pyproject.toml  run_app.bat
.devcontainer/: devcontainer.json
Cuadernos/: Modelos_dimensionales - Clase24.ipynb  Modelos_dimensionales.ipynb  SQL_Class.ipynb
Datos/: empresa.db  empresa.db-journal
streamlits/: ReadMe.MD  app.py  cargar_datos.py  mapa.py  requirements.txt  test_import.py  test_mapa.py  transformacion.py  utils.py  visualizaciones.py
