[project]
name = "código"
version = "0.0.1"
description = "Primer proyecto diplomado"
authors = [
    {name = "SandraG",email = "sandragarzonb@usantotomas.edu.co"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "streamlit (>=1.47.0,<2.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "streamlit-folium (>=0.25.0,<0.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
